--- a/nav.html
+++ b/nav.html
@@ -1,1 +1,1 @@
-<nav><a href="/"><img alt="logo iunctis manibus" src="src/img/logo.png"/></a><a href="/">Wie ben ik</a><a href="#">Coaching</a><a href="#">Opleidingen</a><a href="#">Pesten</a><a href="#">Workshops</a><a href="#">Kalender</a><a href="#">Contact</a><div class="clearfix"></div></nav>
+<nav><a href="/"><img alt="logo iunctis manibus" src="src/img/logo.png"/></a><a href="/">Wie ben ik</a><a href="#">Coaching</a><a href="#">Opleidingen</a><a href="#">Pesten</a><a href="#">Workshops</a><a href="#">Kalender</a><a href="contact.html">Contact</a><div class="clearfix"></div></nav>
